PHP 4.0 CHANGE LOG                                                    ChangeLog
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

??? ?? 1999, Version 4.0 Beta 2
- Made the IMAP module work with PHP 4.0 (Zeev)
- Fixed a problem with include()/require() of URLs (Sascha, Zeev)
- Fixed a bug in implode() that caused it to corrupt its arguments (Zeev)
- Added get_class($obj), get_parent_class($obj) and method_exists($obj,"name")
  (Andi & Zeev)
- Fixed various inheritance problems (Andi & Zeev, libzend)
- Children now inherit their parent's constructor, if they do not supply a
  constructor of their own.
- Fixed runtime inheritence of classes (parent methods/properties were
  overriding their children) (Zeev, libzend)
- Fixed backwards incompatibility with the "new" operator (Andi, libzend)
- Fixed bugs in uksort() and ksort() sort ordering (Andrey)
- Fixed a memory leak when using assignment-op operators with lvalue of type
  string (Zeev, libzend)
- Fixed a problem in inheritence from classes that are defined in include()d
  files (Zeev, libzend)
- Fixed a problem with the PHP error handler that could result in a crash
  on certain operating systems (Zeev)
- Apache php_flag values only recognized 'On' (case sensitive) - changed
  to case insensitive (Zeev)
- Fixed a memory leak with switch statement containing return statements
  (Andi & Zeev, libzend)
- Fixed a crash problem in switch statements that had a string offset
  as a conditional (Andi & Zeev, libzend)
- Imported PHP3 fixes for rand() and mt_rand() (Rasmus)
- Added function entries for strip_tags() and similar_text() (Andrey)
- Fixed a bug in WDDX that would cause a crash if a number was passed in
  instead of a variable name (Andrey)
- Ported strtotime() function from PHP3 (Andrey)
- Merged in gdttf stuff from php3 (Sascha)
- buildconf now checks your installation (Stig)
- XML module now built dynamically with --with-xml=shared (Stig)