@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
  
-/* $Id: sybase-ct.c,v 1.8 1999/07/22 23:54:54 zeev Exp $ */
+/* $Id: sybase-ct.c,v 1.9 1999/08/01 00:33:02 zeev Exp $ */
 
 
 #include "php.h"
@@ -1320,6 +1320,8 @@ PHP_FUNCTION(sybct_fetch_object)
 	php3_sybct_fetch_hash(INTERNAL_FUNCTION_PARAM_PASSTHRU);
 	if (return_value->type==IS_ARRAY) {
 		return_value->type=IS_OBJECT;
+		return_value->value.obj.properties = return_value->value.ht;
+		return_value->value.obj.ce = &zend_standard_class_def;
 	}
 }
 
